Initial commit with all changes by tjwpostma.